--- a/views/pages/event/eventID.handlebars
+++ b/views/pages/event/eventID.handlebars
@@ -26,6 +26,17 @@
     {{>map}}
   </div>
 </div>
+<div id="custom-dialog" class="dialog">
+  <div class="dialog-header">
+    <h2 class="dialog-title"></h2>
+    <button class="close-dialog">&times;</button>
+  </div>
+  <div class="dialog-content"></div>
+  <div class="dialog-footer">
+    <button class="dialog-confirm">Confirm</button>
+    <button class="dialog-cancel">Cancel</button>
+  </div>
+</div>
 <style>
   body {
      font-family: 'Helvetica Neue', sans-serif;
