--- a/views/pages/event/events.handlebars
+++ b/views/pages/event/events.handlebars
@@ -35,6 +35,17 @@
       <button type="submit" class="btn btn-sm btn-primary">Create a New Event</button>
     </form>
   {{/if}}
+  <div id="custom-dialog" class="dialog">
+  <div class="dialog-header">
+    <h2 class="dialog-title"></h2>
+    <button class="close-dialog">&times;</button>
+  </div>
+  <div class="dialog-content"></div>
+  <div class="dialog-footer">
+    <button class="dialog-confirm">Confirm</button>
+    <button class="dialog-cancel">Cancel</button>
+  </div>
+</div>
 <style>
   /* css for dialog */
   .dialog-overlay {
