Added client side JS Validation

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -346,7 +346,7 @@ dd {
 /* #################################################### */
 /* Flex container */
 
-.divError {
+.field-error {
   font-weight: bold;
   color: red;
 }
