--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -25,9 +25,11 @@
             </div>
             {{/each}}
         </div>
+
+        {{#if renderMap}}
         <div class="flex-child">
             <div id="map"></div>
-            
+        {{/if}}
         </div>
     </div>
     
