--- a/views/pages/event/eventID.handlebars
+++ b/views/pages/event/eventID.handlebars
@@ -7,24 +7,24 @@
       <dt>Event Type:</dt>
       <dd class="event-type">{{data.type}}</dd>
       <dt>Date:</dt>
-      <dd class="event-date">{{data.date}}</dd>
+      <dd class="event-date">{{data.event_date}}</dd>
       <dt>Hours:</dt>
       <dd class="event-hours">{{data.formated_time_start}}
         to
         {{data.formated_time_end}}</dd>
     </dl>
-    <button class="register-button" data-id="{{data._id}}">Register</button>
-    {{#if isAdmin}}
-      <div class="event-actions">
+    <div class="event-actions">
+      <button class="register-button" data-id="{{data._id}}">Register</button>
+      {{#if isAdmin}}
         <button class="edit" data-id="{{data._id}}">Edit</button>
         <button class="delete" data-id="{{data._id}}">Delete</button>
-      </div>
-    {{/if}}
+      {{/if}}
+    </div>
   </div>
-  <a class="back-link" href="/events">Back to all Events</a>
   <div class="map">
     {{>map}}
   </div>
+  <a class="back-link" href="/events">Back to all Events</a>
 </div>
 <div id="custom-dialog" class="dialog">
   <div class="dialog-header">
@@ -77,14 +77,6 @@
   .error {
       border-color: #f00;
   }
-  .map {
-      float: right;
-      width: 300px;
-      height: 300px;
-      background-color: #ccc;
-      /* Use placeholder color for map partial */
-      margin-left: 20px;
-  }
   .back-link {
       display: inline-block;
       margin-top: 20px;
@@ -95,7 +87,7 @@
   .back-link:hover {
       text-decoration: underline;
   }
-  .event-details {
+  .event-details, .map {
       margin-bottom: 30px;
   }
   .event-name {
