--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -34,6 +34,7 @@
     </div>
     
 </div>
+{{#if renderMap}}
 <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
 <script>
@@ -48,3 +49,4 @@
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
         { attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>', maxZoom: 19, }).addTo(map);
 </script>
+{{/if}}
