--- a/views/pages/event/createEvent.handlebars
+++ b/views/pages/event/createEvent.handlebars
@@ -106,6 +106,9 @@
     font-size: 14px;
     color: #333;
   }
+  div {
+    margin-bottom: 20px;
+  }
   input,
   select,
   textarea {
@@ -114,7 +117,7 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     font-size: 14px;
   }
   select[multiple] {
@@ -132,12 +135,7 @@
   input[type="submit"]:hover {
     background-color: #861e2f; /* Darken theme color on hover */
   }
-  .error-msg {
-    color: #f00;
-    border-color: #f00;
-    font-size: 0.8rem;
-    margin-top: 0.2rem;
-  }
+
   @media screen and (max-width: 600px) {
   form {
     padding: 20px;
@@ -153,4 +151,19 @@
   padding: 10px;
   margin-bottom: 10px;
 }
+.invalid {
+    border: 1px solid #a32638;
+}
+
+.error-msg {
+    color: #a32638;
+    font-size: 0.9em;
+    margin-top: 5px;
+    display: none;  /* Hide error messages by default */
+}
+
+.invalid + .error-msg {
+    display: block;  /* Show error message when input is invalid */
+}
 </style>
+<script src="/public/js/events.js"></script>
