--- a/views/pages/event/eventID.handlebars
+++ b/views/pages/event/eventID.handlebars
@@ -20,9 +20,7 @@
         <button class="delete" data-id="{{data._id}}">Delete</button>
       {{/if}}
     </div>
-  </div>
-  <div class="map">
-    {{>map}}
+    {{> map}}
   </div>
   <a class="back-link" href="/events">Back to all Events</a>
 </div>
@@ -77,7 +75,7 @@
   .back-link:hover {
       text-decoration: underline;
   }
-  .event-details, .map {
+  .event-details {
       margin-bottom: 30px;
   }
   .event-name {
@@ -131,6 +129,10 @@
   .register-button:hover {
       background-color: #8c1d2b;
   }
+  #map {
+    margin-top: 50px;
+    height: 300px; 
+}
 
 .notification {
   background-color: #fff;
