--- a/views/pages/allfeedbacks.handlebars
+++ b/views/pages/allfeedbacks.handlebars
@@ -1,26 +1,35 @@
-<section>
+<section class="container">
     <h1>Feedbacks</h1>
-
-    {{#each feedbacks}}
-    <div class="cards">
-      <h2><a href="/feedback/{{this._id}}">{{this.username}}</a></h2>
-      <dl>
-        <dt>Event Type</dt>
-        <dd>{{this.reported_object_type}}</dd>
-        <dt>Feedback</dt>
-        <dd>{{this.desc}}</dd>
-      </dl>
-      <br>
-      <div class="container inline-forms">
-        <form method="POST" action="/feedback/{{this._id}}">
-          <button
-            type="submit"
-            class="submit-button"
-          >Resolve</button>
-        </form>
-        </div>
-        <br>
-    </div>
-    {{/each}}
+    {{feedbackString}}
+    {{#if feedbacks}}
+      <table>
+        <tr>
+          <th>Reported by Username</th>
+          <th>Object Type</th>
+          <th>Feedback Received</th>
+          <th>Actions</th>
+        </tr>
+        {{#each feedbacks}}
+        <tr>
+          <td>{{this.username}}</td>
+          <td> <span>{{this.reported_object_type}}</span></td>
+          <td>{{this.desc}}</td>
+          <td><form method="POST" action="/feedback/{{this._id}}">
+            <a href="{{#if_eq this.reported_object_type "departments"}}
+                      /departments/edit/{{this._id}}
+                      {{/if_eq}}
+                      {{#if_eq this.reported_object_type "locations"}}
+                      /locations/edit/{{this._id}}
+                      {{/if_eq}}
+                      {{#if_eq this.reported_object_type "events"}}
+                      /events/edit/{{this._id}}
+                      {{/if_eq}}
+            ">Edit</a>
+            <button type="submit" class="submit-button">Resolve</button>
+          </form></td>
+        </tr>
+        {{/each}}
+      </table>
+    {{/if}}
     
 </section>
