--- a/views/partials/map.handlebars
+++ b/views/partials/map.handlebars
@@ -66,7 +66,7 @@
  const buildingName = "{{ data.name }}"
   // Add OpenStreetMap tiles
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: 'Powered by &copy; <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> Map data &copy; <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>'
+    attribution: 'Powered by &copy; <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> | Map data &copy; <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>'
   }).addTo(map);
 
   // Function to request user's location and provide directions to the building
