--- a/views/pages/location/editLocation.handlebars
+++ b/views/pages/location/editLocation.handlebars
@@ -14,6 +14,7 @@
 
     <label for="location_type">Location Type</label>
     <br>
+    {{data.location_type}}
     <select class="form-input" name="location_type" id="location_type">
         <option value="#">Select Type</option>
         <option value="Residence" {{ selected data.location_type "Residence" }}>Residence</option>
