--- a/views/pages/signup.handlebars
+++ b/views/pages/signup.handlebars
@@ -32,6 +32,10 @@
             {{#if error_msg}}
             <p class="error">{{error_msg}}</p>
             {{/if}}
+
+            {{#if user_created}}
+                <p>User Created!</p>
+            {{/if}}
             <a href="/login">Already a User, Click here to Login!</a>
         </div> 
     </div>
