--- a/views/pages/departments/departments.handlebars
+++ b/views/pages/departments/departments.handlebars
@@ -4,6 +4,16 @@
   <p>Department List</p>
   <div id="department-results" class="container align-items-center">
     <div id="department-container">
+      {{#if admin}}
+      <div class="cards">
+        <div class="cards-inner">
+          <a href="/departments/create">
+            <img src="/public/img/plus-circle.svg" alt="Create new Department">
+            <span>Create New Department</span>
+          </a>
+        </div>
+      </div>
+      {{/if}}
     </div>
     <div id="pagination"></div>
   </div>
