--- a/views/pages/location/location.handlebars
+++ b/views/pages/location/location.handlebars
@@ -1,5 +1,5 @@
-  <div class="flex-container">
-    <div class="flex-child" style="height: 60vh">
+  <div class="flex-container" style="height: 90vh">
+    <div class="flex-child" >
       <h1>{{data.name}}</h1>
       <p>{{data.desc}}</p>
       <p>Building type: {{data.type}}</p>
@@ -11,9 +11,12 @@
     </div>
   </div>
   
+
+  <div class="flex-container">
   {{#if isAdmin}}
     <a href="/rooms/{{data._id}}" class="btn btn-sm btn-primary">Create a New Room</a>
   {{/if}}
+
 
   <div class="container-fluid">
     <div class="row align-items-center">
@@ -37,4 +40,16 @@
       {{/each}}
     </div>
   </div>
+  </div></div>
   <a href="/locations" class="btn btn-info">Back to all locations</a>
+
+
+  <style>
+   
+    .leaflet-routing-container {
+      padding-left:2px;
+      background-color: white;
+    }
+
+    
+  </style>
