--- a/views/partials/map.handlebars
+++ b/views/partials/map.handlebars
@@ -16,13 +16,12 @@
   background-color: white;
   max-height: 50vh;
   overflow-y: scroll;
-  
+  border-radius: 2px;
   }
 
   .leaflet-routing-alt h2::before {
     content: 'Distance, Time';
   }
-
   
   .modal {
   position: fixed;
