--- a/views/pages/event/eventID.handlebars
+++ b/views/pages/event/eventID.handlebars
@@ -20,7 +20,9 @@
         <button class="delete" data-id="{{data._id}}">Delete</button>
       {{/if}}
     </div>
-    {{> map}}
+    {{#if renderMap}}
+        {{> map}}
+    {{/if}}
   </div>
   <a class="back-link" href="/events">Back to all Events</a>
 </div>
