--- a/views/pages/location/location.handlebars
+++ b/views/pages/location/location.handlebars
@@ -14,7 +14,7 @@
 
   <div class="flex-container">
   {{#if isAdmin}}
-    <a href="/rooms/{{data._id}}" class="btn btn-sm btn-primary">Create a New Room</a>
+    <a href="/rooms/{{data._id}}" class="submit-button">Create a New Room</a>
   {{/if}}
 
 
@@ -32,7 +32,7 @@
         <form method="GET" action="/rooms/room/{{_id}}">
           <button
             type="submit"
-            class="btn btn-sm btn-outline-danger">
+            class="submit-button">
             Delete</button>
         </form>
       {{/if}}
@@ -40,6 +40,6 @@
       {{/each}}
     </div>
   </div>
-  </div></div>
-  <a href="/locations" class="btn btn-info">Back to all locations</a>
+  </div>
+  <a href="/locations" class="submit-button">Back to all locations</a>
 
