--- a/public/css/main.css
+++ b/public/css/main.css
@@ -380,6 +380,16 @@ dd {
   justify-content: center;
 }
 
+
+.notification {
+  background-color: #fff;
+  color: #a32638;
+  border: 1px solid #a32638;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
 /* Media queries for smaller screens */
 /* 
 @media screen and (max-width: 768px) {
@@ -425,6 +435,66 @@ p {
   margin-bottom: 8px;
 }
 
+
+ .leaflet-routing-container {
+
+   padding-left: 2px;
+   background-color: white;
+   max-height: 50vh;
+   overflow-y: scroll;
+   border-radius: 2px;
+   width: 25%;
+ }
+
+ .leaflet-routing-alt h2::before {
+   content: 'Distance, Time';
+ }
+
+ .modal {
+   position: fixed;
+   z-index: 9999;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   overflow: auto;
+   background-color: rgba(0, 0, 0, 0.4);
+   backdrop-filter: blur(4px);
+ }
+
+ .modal-content {
+   background-color: #fefefe;
+   margin: 15% auto;
+   padding: 20px;
+   border: 1px solid #888;
+   width: 80%;
+ }
+
+ .modal-footer {
+   display: flex;
+   justify-content: flex-end;
+ }
+
+ .modal-button {
+   background-color: #4CAF50;
+   border: none;
+   color: white;
+   padding: 10px 20px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 16px;
+   margin: 4px 2px;
+   cursor: pointer;
+ }
+
+ .allow {
+   background-color: #4CAF50;
+ }
+
+ .deny {
+   background-color: #f44336;
+ }
 
 
 /* Card */
