fixed html issues

--- a/views/pages/location/editLocation.handlebars
+++ b/views/pages/location/editLocation.handlebars
@@ -52,7 +52,7 @@
 {{/if}}
 
 
-    <input type="submit" class="submit-button" value="Update"></input>
+    <input type="submit" class="submit-button" value="Update">
     <br />
     <a href="/locations" class="btn btn-info">Back to all locations</a>
 </form>
