--- a/views/pages/location/location.handlebars
+++ b/views/pages/location/location.handlebars
@@ -40,6 +40,5 @@
       {{/each}}
     </div>
   </div>
-  </div></div>
+  </div>
   <a href="/locations" class="btn btn-info">Back to all locations</a>
-
