--- a/views/pages/event/createEvent.handlebars
+++ b/views/pages/event/createEvent.handlebars
@@ -68,7 +68,7 @@
       <div class="error-msg"></div>
     </div>
   </fieldset>
-  <input type="submit" class="submit-button" value="Create"></input>
+  <input type="submit" class="submit-button" value="Create">
 </form>
 {{> dialog}}
 <style>
