--- a/views/pages/signup.handlebars
+++ b/views/pages/signup.handlebars
@@ -11,22 +11,22 @@
         <div class="form-inner">
             <h2>Signup</h2>
             <form action="/signup" id="form-signup" method="POST">
-                <label for="username">Name</label>
+                <label for="user_name">Name</label>
                 <br>
                 <input class="form-input" id="user_name" name="user_name" type="text" placeholder="Name" {{#if user_name }} value={{user_name}} {{/if}} required>
                 <br>
-                <label for="email">Email</label>
+                <label for="user_email">Email</label>
                 <br>
                 <input class="form-input" id="user_email" name="user_email" type="email"
                     placeholder="mystevens@stevens.edu" {{#if user_email}} value={{user_email}} {{/if}}required> 
                 <br>
-                <label for="password">Password</label>
+                <label for="user_password">Password</label>
                 <br>
                 <input class="form-input" id="user_password" name="user_password" type="password" placeholder="Password" required>
 
                 <br>
         
-                <input type="submit" class="submit-button" value="Register"></input>
+                <input type="submit" class="submit-button" value="Register">
             </form>
             <div id="error-form" hidden></div>
             {{#if error_msg}}
