Solve totally issues

--- a/views/pages/event/createEvent.handlebars
+++ b/views/pages/event/createEvent.handlebars
@@ -9,7 +9,7 @@
     </div>
     <div>
       <label for="event_desc">Event Description:</label>
-      <textarea id="event_desc" name="event_desc" placeholder="Enter event description"></textarea>
+      <textarea id="event_desc" name="event_desc" placeholder="Enter event description" required></textarea>
       <div class="error-msg"></div>
     </div>
     <div>
