--- a/views/pages/event/eventID.handlebars
+++ b/views/pages/event/eventID.handlebars
@@ -27,122 +27,5 @@
   <a class="back-link" href="/events">Back to all Events</a>
 </div>
 {{> dialog}}
-<style>
-  body {
-     font-family: 'Helvetica Neue', sans-serif;
-     background-color: #f8f8f8;
-  }
-  .container {
-      max-width: 800px;
-      margin: 0 auto;
-      background-color: #fff;
-      padding: 30px;
-      border-radius: 5px;
-      box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
-  }
-  h1 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #a32638;
-      /* Use theme color for headings */
-  }
-  label {
-      display: block;
-      margin-bottom: 5px;
-      font-size: 14px;
-      color: #333;
-  }
-  input, select, textarea {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-      margin-bottom: 20px;
-      font-size: 14px;
-  }
-  textarea {
-      resize: vertical;
-  }
-  .error {
-      border-color: #f00;
-  }
-  .back-link {
-      display: inline-block;
-      margin-top: 20px;
-      font-size: 14px;
-      color: #333;
-      text-decoration: none;
-  }
-  .back-link:hover {
-      text-decoration: underline;
-  }
-  .event-details {
-      margin-bottom: 30px;
-  }
-  .event-name {
-      color: #a32638;
-      font-size: 24px;
-      margin-top: 0;
-  }
-  .event-desc {
-      margin-top: 5px;
-      font-size: 14px;
-      line-height: 1.5;
-  }
-  .event-type {
-      margin-top: 5px;
-      font-size: 14px;
-  }
-  .event-date {
-      margin-top: 5px;
-      font-size: 14px;
-  }
-  .event-hours {
-      margin-top: 5px;
-      font-size: 14px;
-  }
-  .event-actions {
-      margin-top: 10px;
-  }
-  .event-actions button {
-      background-color: #a32638;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 10px 20px;
-      font-size: 14px;
-      margin-right: 10px;
-      cursor: pointer;
-  }
-  .event-actions button:hover {
-      background-color: #8c1d2b;
-  }
-  .register-button {
-      background-color: #a32638;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 10px 20px;
-      font-size: 14px;
-      margin-top: 20px;
-      cursor: pointer;
-  }
-  .register-button:hover {
-      background-color: #8c1d2b;
-  }
-  #map {
-    margin-top: 50px;
-    height: 300px; 
-}
-
-.notification {
-  background-color: #fff;
-  color: #a32638;
-  border: 1px solid #a32638;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 10px;
-}
-</style>
+<link rel="stylesheet" href="/public/css/event.css">
 <script src="/public/js/events.js"></script>
