--- a/views/pages/event/events.handlebars
+++ b/views/pages/event/events.handlebars
@@ -21,8 +21,8 @@
           {{#if @root.isAdmin}}
           <br />
           {{#if ../isAdmin}}
-          <button class="edit" data-id="{{this._id}}">Edit</button>
-          <button class="delete" data-id="{{this._id}}">Delete</button>
+          <button class="edit btn btn-outline-secondary" data-id="{{this._id}}">Edit</button>
+          <button class="delete btn btn-outline-danger" data-id="{{this._id}}">Delete</button>
           {{/if}}
           {{/if}}
         
