--- a/views/pages/location/locations.handlebars
+++ b/views/pages/location/locations.handlebars
@@ -37,11 +37,11 @@
         <form method="GET" action="/locations/edit/{{_id}}">
           <button
             type="submit"
-            class="submit-button"
+            class="submit-button btn btn-outline-secondary"
           >Edit</button>
         </form>
         <form method="POST" action="/locations/{{_id}}">
-          <button type="submit" class="submit-button">Delete</button>
+          <button type="submit" class="submit-button btn btn-outline-danger">Delete</button>
         </form>
         </div>
       {{/if}}
