--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -15,12 +15,12 @@
                     </dd>
                     <dt>Location</dt>
                     <dd><a href="/locations/{{Location_details._id}}">{{Location_details.name}}</a></dd>
-                    {{#if Location_details.rooms}}
+                    {{!-- {{#if Location_details.rooms}}
                     <dt>Room Number</dt>
                     <dd>{{Location_details.rooms.room_number}}</dd>
                     <dt>Floor Number</dt>
                     <dd>{{Location_details.rooms.floor_number}}</dd>
-                    {{/if}}
+                    {{/if}} --}}
                 </dl>
             </div>
             {{/each}}
